# Cpp-test

./: .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  make.sh  standard_makefile
src/: Boy.cpp  Boy.hpp  CMakeLists.txt  Girl.cpp  Girl.hpp  Person.cpp  Person.hpp  main.cpp
